Fix overflow

--- a/jquery.scrollable.css
+++ b/jquery.scrollable.css
@@ -18,7 +18,6 @@
     margin: 0;
     width: auto;
     height: auto;
-    overflow: auto;
 }
 
 .scrollable .scrollbar {
